--- a/templates/about_ko.html
+++ b/templates/about_ko.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -57,16 +57,16 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about">About</a>
+                <a class="nav-link" href="/about_ko">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/service">Service</a>
+                <a class="nav-link" href="/service_ko">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact">Contact</a>
+                <a class="nav-link" href="/contact_ko">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/goods">Goods</a>
+                <a class="nav-link" href="/goods_ko">Goods</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -128,12 +128,12 @@
                 >
                 Get Started? 🐶
               </h1>
-              림펫은 멀티캠퍼스 주관 "빅데이터 기반 지능형 서비스 개발과정"에서
-              수행한<br />
-              기업 요구사항 기반의 문제해결 팀 프로젝트입니다.<br />
-              반려견 커스텀 굿즈 제작을 위한 GAN 기반 cartoon stylization
-              상용서비스 개발이라는 주제로 진행된 프로젝트이며,<br />
-              2022년 4월 11일부터 동년 5월 5일까지 진행되었습니다.<br />
+              림펫은 반려견 그림이 들어간 커스텀 굿즈 제작을 위해 그림과 굿즈
+              제작 서비스를 따로 진행해야 하는 소비자의 불편함을 해소하고자
+              시작됐습니다.<br />
+              우리의 첫번째 목표는 반려견 사진을 다양한 그림체로 변환해주는
+              <a href="/service_ko">서비스</a>이며,<br />
+              변환된 사진을 다양한 서비스와 연결시키는 꿈을 가지고 있습니다.<br />
               프로젝트에 대한 자세한 정보는 Contact 메뉴의 Notion을 참고해주시면
               감사하겠습니다.
             </div>
@@ -161,30 +161,21 @@
                   -webkit-text-stroke: 0.02rem black;
                 "
                 >LimnPet</span
-              >
-              is a styling service that makes your pet photos into various
-              painting styles.<br />
-              You no longer have to pay for the styling of your pet photos.<br />
-              Through
+              >은 반려동물의 사진을 다양한 스타일의 그림체 사진으로 변환해주는
+              <a href="/service_ko">서비스</a>입니다.<br />
+              여러분은 더이상 반려동물의 그림을 얻기위해 돈을 지불할 필요가
+              없습니다.<br />이제부터 당신은 LimnPet <a href="/service_ko">서비스</a>에
+              사진을 넣고 변환된 사진을 저장만 하면됩니다.<br />
               <span
                 style="
                   color: rgb(255, 94, 0);
                   -webkit-text-stroke: 0.02rem black;
                 "
                 >LimnPet</span
-              >, We have simplified the complicated process for purchasing pet
-              custom goods.<br />
-              From now on, all you need to do is upload a picture of your pet to
-              <span
-                style="
-                  color: rgb(255, 94, 0);
-                  -webkit-text-stroke: 0.02rem black;
-                "
-                >LimnPet</span
-              >
-              service and save your newly styled picture!<br />
-              If you want to purchase stylized pet printed custom goods, select
-              Goods from the menu.
+              >을 통해서 생성된 사진을 다양한 <a href="/service_ko">서비스</a>에
+              적용시켜보세요.<br />
+              만약 반려견의 그림 사진이 들어간 커스텀 굿즈를 구매하고 싶으시면,
+              메뉴에서 <a href="/goods_ko">Goods</a> 항목을 선택하세요.
             </div>
           </div>
 
@@ -207,11 +198,11 @@
               </h1>
               림펫 개발팀은 김한주, 성연재, 김민지, 송종호, 정영훈, 총 5명으로
               이루어져있습니다.<br />
-              다양한 전공과 배경을 가진 팀원들이지만 하나의 목표를 함께 이루기
-              위해 노력하고 있습니다.<br />
-              인공지능은 더 이상 어렵고 낯설기만한 분야가 아니라, 개개인의 생활
-              속에 녹아들고 있습니다.<br />
-              저희는 이러한 인공지능을 이용해, 가족의 일원으로 여겨지는
+              다양한 전공과 배경을 가진 팀원들이 하나의 목표를 위해 노력하고
+              있습니다.<br />
+              생활속에 녹아들고 있는 인공지능은 더 이상 어렵고 낯설기만한 분야가
+              아닙니다<br />
+              따라서 저희는 인공지능을 이용해 가족의 일원으로 여겨지는
               반려동물에 대한 서비스를 제공하고자 합니다.<br />
               반려견을 그려주는 서비스는 시작일 뿐입니다.<br />
               앞으로 더욱 다양한 서비스를 제공할 수 있도록 노력하겠습니다.
