--- a/templates/contact_ko.html
+++ b/templates/contact_ko.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -114,33 +114,33 @@
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p style="font-size: x-large"><strong>Hanju Kim</strong></p>
+            <p style="font-size: x-large"><strong>김한주</strong></p>
             <p>&ltE-mail&gt<br />hanjukim0922@gmail.com</p>
-            <p>&ltKakaoTalk&gt<br />hj0922</p>
+            <p>&lt카카오톡&gt<br />hj0922</p>
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p style="font-size: x-large"><strong>Minji Kim </strong></p>
+            <p style="font-size: x-large"><strong>김민지</strong></p>
             <p>&ltE-mail&gt<br />vp9397@naver.com</p>
-            <p>&ltKakaoTalk&gt<br />woodbvo12</p>
+            <p>&lt카카오톡&gt<br />woodbvo12</p>
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p style="font-size: x-large"><strong>Yeonjae Sung </strong></p>
+            <p style="font-size: x-large"><strong>성연재</strong></p>
             <p>&ltE-mail&gt<br />siriyay@naver.com</p>
-            <p>&ltKakaoTalk&gt<br />proofreadd</p>
+            <p>&lt카카오톡&gt<br />proofreadd</p>
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p style="font-size: x-large"><strong>Jongho Song </strong></p>
+            <p style="font-size: x-large"><strong>송종호</strong></p>
             <p>&ltE-mail&gt<br />sjh7397@naver.com</p>
-            <p>&ltKakaoTalk&gt<br />Lilac3</p>
+            <p>&lt카카오톡&gt<br />Lilac3</p>
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p style="font-size: x-large"><strong>YeongHoon Jeong </strong></p>
+            <p style="font-size: x-large"><strong>정영훈</strong></p>
             <p>&ltE-mail&gt<br />gi93008@naver.com</p>
-            <p>&ltKakaoTalk&gt<br />gannak8</p>
+            <p>&lt카카오톡&gt<br />gannak8</p>
           </div>
           <div>
             <a href="https://www.limnpet.ml" class="ct">Home</a>
