--- a/templates/goods_JP.html
+++ b/templates/goods_JP.html
@@ -91,11 +91,11 @@
       <div style="display: flex;justify-content: center;align-content: center;">
         <div class="five" >
           <div style="padding-top:2rem;padding-bottom:2rem;">
-         <p style="font-weight:900;font-size:32px">Goods Shops</p>
+         <p style="font-weight:400;font-size:32px">Goods Shops</p>
           <h4>
-            <p style="color:white;">Make your customized product with a limpet!</p>
-            <p style="color:white;">If you want to use the customized image as a product, please click the picture below.</p>
-            <p style='color:red;'>Warning! The below site can is only available in Korea.</p>
+            <p style="color:white;">リンペットと一緒にあなただけの製品を作ってみましょう!</p>
+            <p style="color:white;">もしあなただけの製品を作りたいなら、下記の図をクリックしてください。</p>
+            <p style='color:red;'>ご注意!下記のサイトはただ韓国内でのみ製作が可能です。</p>
           </h4>
           </div>
           <div class="lists">
@@ -109,7 +109,7 @@
                     style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis1"
                   >
-                    Bizhows
+                  ビーズハウス
                   </div>
                 </a>
                 <a href="https://www.publog.co.kr/Default.asp" class="ac2">
@@ -120,7 +120,7 @@
                     style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis2"
                   >
-                    Publog
+                  パブログ
                   </div>
                 </a>
                 <a href="https://www.tpana.com/" class="ac3">
@@ -131,7 +131,7 @@
                     style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis3"
                   >
-                    Tpana
+                  ティファナ
                   </div>
                 </a>
                 <a href="https://www.customzone.co.kr/" class="ac4">
@@ -142,13 +142,14 @@
                     style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis4"
                   >
-                    Customzone
+                  カスタムゾーン
                   </div>
                 </a>
               </div>
             </div>
-            <p class="tes">Clothes</p>
-            <p class="tet">These links allow you to customize clothes such as T-shirts and Hood T-shirts. <p style="color:yellow" class="tet">Use a limpet to make your own clothes!</p></p>
+            <p class="tes">衣類</p>
+            <p class="tet" style="height:65px;">上記のリンクはTシャツやフードなどの衣類を製作しています。</p>
+            <p style="color:yellow;height:65px;" class="tet">リンペットを使ってあなただけの衣類を作ってみてください!</p>
           </div>
           <div class="lists">
             <div class="list2">
@@ -163,7 +164,7 @@
                     style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis1"
                   >
-                    Bandya
+                  バンディヤ
                   </div>
                 </a>
                 <a href="https://www.marpple.com/kr/" class="ac2">
@@ -174,7 +175,7 @@
                     style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis2"
                   >
-                    MARPPLE
+                  マープル
                   </div>
                 </a>
                 <a href="https://www.phoneppu.com/" class="ac3">
@@ -185,7 +186,7 @@
                     style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis3"
                   >
-                    Phoneppu
+                  フォンプ
                   </div>
                 </a>
                 <a href="https://shapely.co.kr/" class="ac4">
@@ -196,13 +197,14 @@
                     style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis4"
                   >
-                    Shapely
+                  シェアプリ
                   </div>
                 </a>
               </div>
             </div>
-            <p class="tes">Phone-Accessory</p>
-            <p class="tet">These links allow you to customize phone-accessory such as phone-cases. <p style="color:yellow" class="tet">Use a limpet to make your own phone-accessory!</p></p>
+            <p class="tes">携帯アクセサリー</p>
+            <p class="tet" style="height:65px;">上記のリンクは携帯ケースのような携帯アクセサリーを製作してくれます。</p>
+            <p style="color:yellow;height:65px;" class="tet">リンペットを使ってあなただけの携帯アクセサリーを作ってみてください！</p>
           </div>
           <div class="lists">
             <div class="list3">
@@ -217,7 +219,7 @@
                     style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis1"
                   >
-                    Handmadec
+                  ハンドメイドシー
                   </div>
                 </a>
                 <a href="http://www.jjomool.com/" class="ac2">
@@ -228,7 +230,7 @@
                     style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis2"
                   >
-                    Jjomoolshop
+                  チョムルショップ
                   </div>
                 </a>
                 <a href="https://www.ruashop.co.kr/" class="ac3">
@@ -239,7 +241,7 @@
                     style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis3"
                   >
-                    Ruashop
+                  ルアーショップ
                   </div>
                 </a>
                 <a
@@ -253,13 +255,14 @@
                     style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis4"
                   >
-                    Thankshop
+                  タンズショップ
                   </div>
                 </a>
               </div>
             </div>
-            <p class="tes">Bottle & Cup</p>
-            <p class="tet">These links allow you to customize bottle & cup such as mug and tumbler. <p style="color:yellow" class="tet">Use a limpet to make your own bottle & cup!</p></p>
+            <p class="tes">コップと瓶</p>
+            <p style="height:65px;" class="tet">上記のリンクはマグカップやタンブラーのようなカップとボトルを製作してくれます。</p>
+            <p style="color:yellow;height:65px;" class="tet">リムペットを使ってあなただけのコップとボトルを作ってみてください!</p>
           </div>
           <div class="lists">
             <div class="list4">
@@ -274,7 +277,7 @@
                     style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis1"
                   >
-                    Smilecat
+                  スマイルキャット
                   </div>
                 </a>
                 <a href="http://www.adsland.com/" class="ac2">
@@ -285,7 +288,7 @@
                     style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis2"
                   >
-                    Adsland
+                  アドスランド
                   </div>
                 </a>
                 <a href="http://www.t-free.co.kr/" class="ac3">
@@ -296,7 +299,7 @@
                     style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis3"
                   >
-                    The Fancy & Stiker
+                  ザ·ファンズ
                   </div>
                 </a>
                 <a href="http://www.huniprinting.com/" class="ac4">
@@ -307,13 +310,14 @@
                     style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis4"
                   >
-                    huniprinting
+                  フニプリンティング
                   </div>
                 </a>
               </div>
             </div>
-            <p class='tes'>Bookbinding</p>
-            <p class="tet">These links allow you to customize bookbiding such as calendar and postcard. <p style="color:yellow" class="tet">Use a limpet to make your own bookbinding!</p></p>
+            <p class='tes'>製本</p>
+            <p class="tet" style="height:65px;">上記のリンクはカレンダーや葉書などを製本してくれます。 </p>
+            <p style="color:yellow;height:65px;" class="tet">リンペットを使ってあなただけのパンフレットを作ってみてください！</p>
           </div>
         </div>
       </div>
