--- a/templates/goods_KR.html
+++ b/templates/goods_KR.html
@@ -93,9 +93,9 @@
           <div style="padding-top:2rem;padding-bottom:2rem;">
          <p style="font-weight:900;font-size:32px">Goods Shops</p>
           <h4>
-            <p style="color:white;">Make your customized product with a limpet!</p>
-            <p style="color:white;">If you want to use the customized image as a product, please click the picture below.</p>
-            <p style='color:red;'>Warning! The below site can is only available in Korea.</p>
+            <p style="color:white;">림펫과 함께 당신만의 제품을 만들어 보세요!</p>
+            <p style="color:white;">만약 당신만의 제품을 만들고 싶다면, 아래의 그림을 클릭해주세요.</p>
+            <p style='color:red;'>주의! 아래의 사이트는 오직 한국내에서만 제작이 가능합니다.</p>
           </h4>
           </div>
           <div class="lists">
@@ -109,7 +109,7 @@
                     style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis1"
                   >
-                    Bizhows
+                    비즈하우스
                   </div>
                 </a>
                 <a href="https://www.publog.co.kr/Default.asp" class="ac2">
@@ -120,7 +120,7 @@
                     style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis2"
                   >
-                    Publog
+                    퍼블로그
                   </div>
                 </a>
                 <a href="https://www.tpana.com/" class="ac3">
@@ -131,7 +131,7 @@
                     style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis3"
                   >
-                    Tpana
+                    티파나
                   </div>
                 </a>
                 <a href="https://www.customzone.co.kr/" class="ac4">
@@ -142,13 +142,13 @@
                     style="background-image: url('../../static/img/cloth_origin.jpg')"
                     class="dis4"
                   >
-                    Customzone
+                    커스텀존
                   </div>
                 </a>
               </div>
             </div>
-            <p class="tes">Clothes</p>
-            <p class="tet">These links allow you to customize clothes such as T-shirts and Hood T-shirts. <p style="color:yellow" class="tet">Use a limpet to make your own clothes!</p></p>
+            <p class="tes">의류</p>
+            <p class="tet" style="height:40px;">위의 링크들은 T셔츠나 후드와 같은 의류들을 제작해줍니다.<p style="color:yellow" class="tet">림펫을 사용하여 당신만의 의류를 만들어보세요!</p></p>
           </div>
           <div class="lists">
             <div class="list2">
@@ -163,7 +163,7 @@
                     style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis1"
                   >
-                    Bandya
+                    반디야
                   </div>
                 </a>
                 <a href="https://www.marpple.com/kr/" class="ac2">
@@ -174,7 +174,7 @@
                     style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis2"
                   >
-                    MARPPLE
+                    마플
                   </div>
                 </a>
                 <a href="https://www.phoneppu.com/" class="ac3">
@@ -185,7 +185,7 @@
                     style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis3"
                   >
-                    Phoneppu
+                    폰뿌
                   </div>
                 </a>
                 <a href="https://shapely.co.kr/" class="ac4">
@@ -196,13 +196,13 @@
                     style="background-image: url('../../static/img/griptok_origin.jpg')"
                     class="dis4"
                   >
-                    Shapely
+                    셰어플리
                   </div>
                 </a>
               </div>
             </div>
-            <p class="tes">Phone-Accessory</p>
-            <p class="tet">These links allow you to customize phone-accessory such as phone-cases. <p style="color:yellow" class="tet">Use a limpet to make your own phone-accessory!</p></p>
+            <p class="tes">핸드폰 악세서리</p>
+            <p class="tet" style="height:40px;">위의 링크들은 핸드폰 케이스와 같은 휴대폰 악세서리들을 제작해줍니다. <p style="color:yellow" class="tet">림펫을 사용하여 당신만의 휴대폰 악세서리를 만들어보세요!</p></p>
           </div>
           <div class="lists">
             <div class="list3">
@@ -217,7 +217,7 @@
                     style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis1"
                   >
-                    Handmadec
+                    핸드메이드씨
                   </div>
                 </a>
                 <a href="http://www.jjomool.com/" class="ac2">
@@ -228,7 +228,7 @@
                     style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis2"
                   >
-                    Jjomoolshop
+                    쪼물샵
                   </div>
                 </a>
                 <a href="https://www.ruashop.co.kr/" class="ac3">
@@ -239,7 +239,7 @@
                     style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis3"
                   >
-                    Ruashop
+                    루아샵
                   </div>
                 </a>
                 <a
@@ -253,13 +253,13 @@
                     style="background-image: url('../../static/img/cup_origin.jpg')"
                     class="dis4"
                   >
-                    Thankshop
+                    떙스샵
                   </div>
                 </a>
               </div>
             </div>
-            <p class="tes">Bottle & Cup</p>
-            <p class="tet">These links allow you to customize bottle & cup such as mug and tumbler. <p style="color:yellow" class="tet">Use a limpet to make your own bottle & cup!</p></p>
+            <p class="tes">컵과 병</p>
+            <p style="height:40px;" class="tet">위의 링크들은 머그컵과 텀블러와 같은 컵과 병을 제작해줍니다. <p style="color:yellow" class="tet">림펫을 사용하여 당신만의 컵과 병을 만들어보세요!</p></p>
           </div>
           <div class="lists">
             <div class="list4">
@@ -274,7 +274,7 @@
                     style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis1"
                   >
-                    Smilecat
+                    스마일캣
                   </div>
                 </a>
                 <a href="http://www.adsland.com/" class="ac2">
@@ -285,7 +285,7 @@
                     style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis2"
                   >
-                    Adsland
+                    애드스랜드
                   </div>
                 </a>
                 <a href="http://www.t-free.co.kr/" class="ac3">
@@ -296,7 +296,7 @@
                     style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis3"
                   >
-                    The Fancy & Stiker
+                    더팬스
                   </div>
                 </a>
                 <a href="http://www.huniprinting.com/" class="ac4">
@@ -307,13 +307,13 @@
                     style="background-image: url('../../static/img/sticker_origin.jpg')"
                     class="dis4"
                   >
-                    huniprinting
+                    후니프린팅
                   </div>
                 </a>
               </div>
             </div>
-            <p class='tes'>Bookbinding</p>
-            <p class="tet">These links allow you to customize bookbiding such as calendar and postcard. <p style="color:yellow" class="tet">Use a limpet to make your own bookbinding!</p></p>
+            <p class='tes'>제본</p>
+            <p class="tet" style="height:40px;">위의 링크들은 달력과 엽서등을 제본해줍니다. <p style="color:yellow" class="tet">림펫을 사용하여 당신만의 책자를 만들어보세요!</p></p>
           </div>
         </div>
       </div>
