--- a/templates/index_ko.html
+++ b/templates/index_ko.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta name="robots" content="index,follow" />
     <meta
@@ -30,26 +30,11 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename = 'css/main.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename = 'css/scroll.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename = 'css/banner.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename = 'css/slideshow.css') }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename = 'css/contact.css') }}"
-    />
+    <link rel="stylesheet" href="../static/css/main.css" />
+    <link rel="stylesheet" href="../static/css/scroll.css" />
+    <link rel="stylesheet" href="../static/css/banner.css" />
+    <link rel="stylesheet" href="../static/css/slideshow.css" />
+    <link rel="stylesheet" href="../static/css/contact.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap");
     </style>
@@ -67,22 +52,21 @@
             <div class="slide"></div>
             <div class="slide"></div>
             <div class="overlay">
-              <h1>
-                <p>Drawing your pet, LimnPet</p>
+              <h1>Drawing your pet, LimnPet</h1>
+              <div id="service_button">
                 <button
-                  class="service_button"
+                  class="remove-image"
                   type="button"
                   onClick="location.href='/service'"
                 >
-                  <span class="image-title">Try Limnpet Service</span>
+                  <span class="image-title">림펫서비스로 이동</span>
                 </button>
-              </h1>
+              </div>
             </div>
           </section>
         </main>
       </div>
     </div>
-
     <div id="container" role="main">
       <div class="menu" id="header" role="menu">
         <nav class="menu navbar navbar-expand-lg navbar-dark nav-distance">
@@ -161,32 +145,30 @@
               <div class="content-carrousel">
                 <figure class="shadow">
                   <img
-                    src="{{ url_for('static', filename = 'img/slideshow/disney.jpg') }}"
+                    src="https://images.mubicdn.net/images/cast_member/1419/cache-10-1535963981/image-w856.jpg?size=800x"
+                  />
+                </figure>
+                <figure class="shadow">
+                  <img src="https://wallpaperaccess.com/full/6608526.jpg" />
+                </figure>
+                <figure class="shadow">
+                  <img
+                    src="https://mblogthumb-phinf.pstatic.net/MjAxNzA3MThfMTkx/MDAxNTAwMzEyOTMzNzI2.Jr6gdX_6k6Ywkof6W3dc2J9oIpc6QQbnYSK0MZgCoJog.qZ7pfbkng1P0vDaDKb9Q0lTwFQm-RFpM65lBsxGSFKEg.JPEG.joonicarus/movie_image_%2811%29.jpg?type=w800"
                   />
                 </figure>
                 <figure class="shadow">
                   <img
-                    src="{{ url_for('static', filename = 'img/slideshow/hayao.jpg') }}"
+                    src="https://lumiere-a.akamaihd.net/v1/images/og_disney_4a3148aa.jpeg?region=0%2C0%2C1200%2C630"
                   />
                 </figure>
                 <figure class="shadow">
                   <img
-                    src="{{ url_for('static', filename = 'img/slideshow/shinkai.jpg') }}"
+                    src="http://cdn.bosa.co.kr/news/photo/202112/2163722_195185_3526.jpg"
                   />
                 </figure>
                 <figure class="shadow">
                   <img
-                    src="{{ url_for('static', filename = 'img/slideshow/monet.jpg') }}"
-                  />
-                </figure>
-                <figure class="shadow">
-                  <img
-                    src="{{ url_for('static', filename = 'img/slideshow/ladyoscar.jpg') }}"
-                  />
-                </figure>
-                <figure class="shadow">
-                  <img
-                    src="{{ url_for('static', filename = 'img/slideshow/onepiece.jpg') }}"
+                    src="http://itimg.chosun.com/sitedata/image/201910/26/2019102600772_0.jpg"
                   />
                 </figure>
               </div>
@@ -197,101 +179,108 @@
             Hello, We are LimnPet! 🐶
           </p>
           <p style="font-size: 20px; font-style: italic; color: aliceblue">
-            LimnPet is a styling service that makes your pet photos into various
-            painting styles
+            LimnPet으로 반려견의 사진을 다양한 그림체로 변환해 보세요!
           </p>
 
-          <div
-            class="intext"
-            style="
-              font-size: 28px;
-              font-weight: 500;
-              line-height: 3;
-              color: aliceblue;
-            "
-          >
-            You no longer have to pay for the styling of your pet photos.<br />
-            Through <a href="/service">LimnPet</a>, We have simplified the
-            complicated process for purchasing pet custom goods.<br />
-            From now on, all you need to do is upload a picture of your pet to
-            <a href="/service">LimnPet</a> service and save your newly styled
-            picture!<br />
-            If you want to purchase stylized pet printed custom goods, select
-            <a href="/goods">Goods</a> from the menu.
+          <div class="intext">
+            <h1 style="color: aliceblue">
+              What Is
+              <span
+                style="
+                  color: rgb(255, 94, 0);
+                  -webkit-text-stroke: 0.02rem black;
+                "
+                >LimnPet</span
+              >? 🐶
+            </h1>
+            <span
+              style="color: rgb(255, 94, 0); -webkit-text-stroke: 0.02rem black"
+              >LimnPet</span
+            >은 반려동물의 사진을 다양한 스타일의 그림체 사진으로 변환해주는
+            <a href="/service_ko">서비스</a>입니다.<br />
+            여러분은 더이상 반려동물의 그림을 얻기위해 돈을 지불할 필요가
+            없습니다.<br />이제부터 당신은 LimnPet
+            <a href="/service_ko">서비스</a>에 사진을 넣고 변환된 사진을 저장만
+            하면됩니다.<br />
+            <span
+              style="color: rgb(255, 94, 0); -webkit-text-stroke: 0.02rem black"
+              >LimnPet</span
+            >을 통해서 생성된 사진을 다양한 <a href="/service_ko">서비스</a>에
+            적용시켜보세요.<br />
+            만약 반려견의 그림 사진이 들어간 커스텀 굿즈를 구매하고 싶으시면,
+            메뉴에서 <a href="/goods_ko">Goods</a> 항목을 선택하세요.
           </div>
 
-          <p style="font-size: 48px; font-weight: 600; color: aliceblue">
+          <p style="font-size: 40px; font-weight: 600; color: aliceblue">
             <br /><br /><u>Future Plans</u>
           </p>
 
           <div class="futureplans">
             <img
               class="futureplans_img"
-              src="{{ url_for('static', filename = 'img/futureplans/collabo.jpg') }}"
+              src="{{ url_for('static', filename = 'img/futureplans_collabo.jpg') }}"
               alt=""
             />
             <p>
-              LimnPet's exclusive goods edition<br />
+              LimnPet의 굿즈 에디션!<br />
               <span style="color: #ff483b; font-weight: 800"
-                >via collaboration with artist, goods brand</span
+                >다양한 아티스트, 브랜드와 콜라보레이션</span
               >
             </p>
           </div>
           <div class="futureplans">
             <img
               class="futureplans_img"
-              src="{{ url_for('static', filename = 'img/futureplans/option.jpg') }}"
+              src="{{ url_for('static', filename = 'img/futureplans_opt.jpg') }}"
               alt=""
             />
             <p>
               Considering to add<br />
-              <span style="color: #ff483b; font-weight: 800"
-                >photo manipulation options</span
+              <span style="color: #ff483b; font-weight: 800">포토샵 옵션</span
               ><br />
             </p>
           </div>
           <div class="futureplans">
             <img
               class="futureplans_img"
-              src="{{ url_for('static', filename = 'img/futureplans/emoji.png') }}"
+              src="{{ url_for('static', filename = 'img/futureplans_emoji.png') }}"
               alt=""
             />
             <p>
-              Stylized pet photos into your own<br />
-              <span style="color: #ff483b; font-weight: 800">emoji</span>
+              나만의 반려견
+              <span style="color: #ff483b; font-weight: 800">이모티콘</span
+              >만들기
             </p>
           </div>
           <div class="futureplans">
             <img
               class="futureplans_img"
-              src="{{ url_for('static', filename = 'img/futureplans/nft.jpg') }}"
+              src="{{ url_for('static', filename = 'img/futureplans_nft.jpg') }}"
               alt=""
             />
             <p>
-              Stylized pet photos into<br />
-              <span style="color: #ff483b; font-weight: 800">NFT</span><br />
+              변환된 사진을<br />
+              <span style="color: #ff483b; font-weight: 800">NFT</span>로<br />
             </p>
           </div>
         </div>
       </div>
 
       <div class="list">
-        <div class="three" style="padding-top: 15rem; color: aliceblue">
-          <p style="font-size: 48px; font-weight: 600">
+        <div class="three">
+          <p style="font-size: 48px; font-weight: 600; color: aliceblue">
             Service Before & After 🎨
           </p>
-
           <div class="beforeafter">
             <iframe
               style="width: 100%; height: 100%"
               frameborder="0"
               class="juxtapose"
               src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=6093a3be-c451-11ec-b5bb-6595d9b17862"
-            >
-            </iframe>
+            ></iframe>
           </div>
-          <p style="font-weight: 600; font-size: 30px">
-            <br />Move the navigation bar
+          <p style="font-weight: 600; font-size: 30px; color: black">
+            <br />바를 움직여보세요
           </p>
           <div id="service_button">
             <button
@@ -299,7 +288,7 @@
               type="button"
               onClick="location.href='/service'"
             >
-              <span class="image-title">Move to Limnpet Service</span>
+              <span class="image-title">림펫서비스로 이동</span>
             </button>
           </div>
         </div>
@@ -309,33 +298,33 @@
         <div class="four">
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>Hanju Kim</p>
-            <p>E-mail : hanjukim0922@gmail.com</p>
-            <p>KakaoTalk : hj0922</p>
-          </div>
-          <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>Minji Kim</p>
-            <p>E-mail : vp9397@naver.com</p>
-            <p>KakaoTalk : woodbvo12</p>
-          </div>
-          <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>Yeonjae Sung</p>
-            <p>E-mail : siriyay@naver.com</p>
-            <p>KakaoTalk : proofreadd</p>
-          </div>
-          <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>Jongho Song</p>
+            <p>김한주</p>
             <p>E-mail : sjh7397@naver.com</p>
-            <p>KakaoTalk : Lilac3</p>
+            <p>카카오톡 : Lilac3</p>
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>JeongYeong Hoon</p>
-            <p>E-mail : gi93008@naver.com</p>
-            <p>KakaoTalk : gannak8</p>
+            <p>김민지</p>
+            <p>E-mail : sjh7397@naver.com</p>
+            <p>카카오톡 : Lilac3</p>
+          </div>
+          <div class="member">
+            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <p>성연재</p>
+            <p>E-mail : sjh7397@naver.com</p>
+            <p>카카오톡 : Lilac3</p>
+          </div>
+          <div class="member">
+            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <p>송종호</p>
+            <p>E-mail : sjh7397@naver.com</p>
+            <p>카카오톡 : Lilac3</p>
+          </div>
+          <div class="member">
+            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <p>정영훈</p>
+            <p>E-mail : sjh7397@naver.com</p>
+            <p>카카오톡 : Lilac3</p>
           </div>
           <div>
             <a href="https://www.limnpet.ml" class="ct">Home</a>
@@ -346,7 +335,7 @@
       </div>
 
       <div class="list">
-        <div class="five" style="padding-top: 15rem">
+        <div class="five">
           <h1 styl="text-align:center">🐶 Goods Shops 🐶</h1>
           <div class="lists">
             <img
@@ -354,7 +343,7 @@
               src="{{ url_for('static', filename = 'img/goods_clothes.jpg') }}"
               alt=""
             />
-            <p>Clothing</p>
+            <p>의류</p>
           </div>
           <div class="lists">
             <img
@@ -362,7 +351,7 @@
               src="{{ url_for('static', filename = 'img/goods_griptok.jpg') }}"
               alt=""
             />
-            <p>Accessories</p>
+            <p>휴대폰 액세서리</p>
           </div>
           <div class="lists">
             <img
@@ -370,7 +359,7 @@
               src="{{ url_for('static', filename = 'img/goods_cup.jpg') }}"
               alt=""
             />
-            <p>Household Goods</p>
+            <p>생활용품</p>
           </div>
           <div class="lists">
             <img
@@ -378,7 +367,7 @@
               src="{{ url_for('static', filename = 'img/goods_sticker.jpg') }}"
               alt=""
             />
-            <p>Others</p>
+            <p>그 외 기타</p>
           </div>
         </div>
       </div>
