--- a/static/css/scroll.css
+++ b/static/css/scroll.css
@@ -10,7 +10,6 @@
 
 .list {
   background: linear-gradient(to right, #f2994a, #f2c94c);
-
   width: 100%;
   height: 100vh;
   /* display: flex; */
@@ -32,7 +31,6 @@
   background-position: center;
   width: 100%;
   height: 100%;
-  padding-bottom: 40px;
   /* height: 110vh; */
   /* overflow:hidden; */
 }
@@ -43,15 +41,17 @@
   background-position: center;
   width: 100%;
   height: 100%;
-  padding-top: 40px;
-  padding-top: 100px;
+  /* padding-top: 200px; */
 }
 
 .list:nth-child(4) {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  height: 70vh;
+  /* height: 100vh;
+  padding-top: 300px; */
+  width: 100%;
+  height: 100%;
 }
 @media screen and (max-width: 669px) {
   .list:nth-child(4) {
