--- a/templates/goods_ko.html
+++ b/templates/goods_ko.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0028)https://www.limnpet.ml/goods -->
-<html lang="en">
+<html lang="ko">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
@@ -8,13 +8,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goods</title>
     <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/main.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/goods.css') }}" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename = 'css/main.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename = 'css/goods.css') }}"
+    />
   </head>
 
   <body>
@@ -63,22 +79,23 @@
                   Languages
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <form
-                    method="post"
-                    action="/languages"
-                    enctype="multipart/form-data"
-                  >
-                    <select name="lng">
-                      <option type="text" , value="en">한국어</option>
-                      <option type="text" , value="en">English</option>
-                      <option type="text" , value="ja">日本語</option>
-                      <option type="text" , value="es">español</option>
-                      <option type="text" , value="fr">français</option>
-                      <option type="text" , value="id">bahasa Indonesia</option>
-                      <option type="text" , value="zh-CN">简体中文</option>
-                      <option type="text" , value="zh-TW">繁體中文</option>
-                    </select>
-                  </form>
+                  <select name="lng">
+                    <option type="text" , value="ko">
+                      <a class="ko" href="/index_ko">한국어</a>
+                    </option>
+                    <option type="text" , value="en">
+                      <a class="en" href="/index">English</a>
+                    </option>
+                    <option type="text" , value="ja">
+                      <a class="ja" href="/index_ja">日本語</a>
+                    </option>
+                    <option type="text" , value="es">
+                      <a class="es" href="/index_es">español</a>
+                    </option>
+                    <option type="text" , value="zh-CN">
+                      <a class="zh-CN" href="/index_zh-CN">简体中文</a>
+                    </option>
+                  </select>
                 </ul>
               </li>
             </ul>
@@ -88,90 +105,110 @@
     </div>
 
     <div id="container" role="main">
-      <div style="display: flex;justify-content: center;align-content: center;">
-        <div class="five" >
-          <div style="padding-top:2rem;padding-bottom:2rem;">
-         <p style="font-weight:900;font-size:32px">Goods Shops</p>
-          <h4>
-            <p style="color:white;">Make your customized product with a limpet!</p>
-            <p style="color:white;">If you want to use the customized image as a product, please click the picture below.</p>
-            <p style='color:red;'>Warning! The below site can is only available in Korea.</p>
-          </h4>
-          </div>
+      <div class="list">
+        <div class="five">
+          <h1 styl="text-align:center">🐶 Goods Shops 🐶</h1>
           <div class="lists">
             <div class="list1">
-              <div style='background-image:url("../../static/img/cloth_modified.jpg")' class="img">
+              <div class="img">
                 <a href="https://www.bizhows.com/" class="ac1">
                   <div
+                    style="
+                      background-image: url('../../static/img/cloth_modified.jpg');
+                    "
                     class="imc1"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/cloth_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/cloth_origin.jpg');
+                    "
                     class="dis1"
                   >
-                    Bizhows
+                    비즈하우스
                   </div>
                 </a>
                 <a href="https://www.publog.co.kr/Default.asp" class="ac2">
                   <div
+                    style="
+                      background-image: url('../../static/img/cloth_modified.jpg');
+                    "
                     class="imc2"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/cloth_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/cloth_origin.jpg');
+                    "
                     class="dis2"
                   >
-                    Publog
+                    퍼블로그
                   </div>
                 </a>
                 <a href="https://www.tpana.com/" class="ac3">
                   <div
+                    style="
+                      background-image: url('../../static/img/cloth_modified.jpg');
+                    "
                     class="imc3"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/cloth_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/cloth_origin.jpg');
+                    "
                     class="dis3"
                   >
-                    Tpana
+                    티파나
                   </div>
                 </a>
                 <a href="https://www.customzone.co.kr/" class="ac4">
                   <div
+                    style="
+                      background-image: url('../../static/img/cloth_modified.jpg');
+                    "
                     class="imc4"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/cloth_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/cloth_origin.jpg');
+                    "
                     class="dis4"
                   >
-                    Customzone
+                    커스텀존
                   </div>
                 </a>
               </div>
             </div>
-            <p class="tes">Clothes</p>
-            <p class="tet">These links allow you to customize clothes such as T-shirts and Hood T-shirts. <p style="color:yellow" class="tet">Use a limpet to make your own clothes!</p></p>
+            <p>의류</p>
           </div>
           <div class="lists">
             <div class="list2">
-              <div
-              style="background-image: url('../../static/img/griptok_modified.jpg')"
-              class="img">
+              <div class="img">
                 <a href="http://www.bandya.com/" class="ac1">
                   <div
+                    style="
+                      background-image: url('../../static/img/griptok_modified.jpg');
+                    "
                     class="imc1"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/griptok_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/griptok_origin.jpg');
+                    "
                     class="dis1"
                   >
-                    Bandya
+                    반디야
                   </div>
                 </a>
                 <a href="https://www.marpple.com/kr/" class="ac2">
                   <div
+                    style="
+                      background-image: url('../../static/img/griptok_modified.jpg');
+                    "
                     class="imc2"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/griptok_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/griptok_origin.jpg');
+                    "
                     class="dis2"
                   >
                     MARPPLE
@@ -179,67 +216,89 @@
                 </a>
                 <a href="https://www.phoneppu.com/" class="ac3">
                   <div
+                    style="
+                      background-image: url('../../static/img/griptok_modified.jpg');
+                    "
                     class="imc3"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/griptok_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/griptok_origin.jpg');
+                    "
                     class="dis3"
                   >
-                    Phoneppu
+                    폰뿌
                   </div>
                 </a>
                 <a href="https://shapely.co.kr/" class="ac4">
                   <div
+                    style="
+                      background-image: url('../../static/img/griptok_modified.jpg');
+                    "
                     class="imc4"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/griptok_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/griptok_origin.jpg');
+                    "
                     class="dis4"
                   >
-                    Shapely
+                    셰이플리
                   </div>
                 </a>
               </div>
             </div>
-            <p class="tes">Phone-Accessory</p>
-            <p class="tet">These links allow you to customize phone-accessory such as phone-cases. <p style="color:yellow" class="tet">Use a limpet to make your own phone-accessory!</p></p>
+            <p>휴대폰 악세서리</p>
           </div>
           <div class="lists">
             <div class="list3">
-              <div
-              style="background-image: url('../../static/img/cup_modified.jpg')"
-              class="img">
+              <div class="img">
                 <a href="http://www.handmc.com/" class="ac1">
                   <div
+                    style="
+                      background-image: url('../../static/img/cup_modified.jpg');
+                    "
                     class="imc1"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/cup_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/cup_origin.jpg');
+                    "
                     class="dis1"
                   >
-                    Handmadec
+                    핸드메이드씨
                   </div>
                 </a>
                 <a href="http://www.jjomool.com/" class="ac2">
                   <div
+                    style="
+                      background-image: url('../../static/img/cup_modified.jpg');
+                    "
                     class="imc2"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/cup_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/cup_origin.jpg');
+                    "
                     class="dis2"
                   >
-                    Jjomoolshop
+                    쪼물샵
                   </div>
                 </a>
                 <a href="https://www.ruashop.co.kr/" class="ac3">
                   <div
+                    style="
+                      background-image: url('../../static/img/cup_modified.jpg');
+                    "
                     class="imc3"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/cup_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/cup_origin.jpg');
+                    "
                     class="dis3"
                   >
-                    Ruashop
+                    루아샵
                   </div>
                 </a>
                 <a
@@ -247,73 +306,94 @@
                   class="ac4"
                 >
                   <div
+                    style="
+                      background-image: url('../../static/img/cup_modified.jpg');
+                    "
                     class="imc4"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/cup_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/cup_origin.jpg');
+                    "
                     class="dis4"
                   >
-                    Thankshop
+                    땡스샵
                   </div>
                 </a>
               </div>
             </div>
-            <p class="tes">Bottle & Cup</p>
-            <p class="tet">These links allow you to customize bottle & cup such as mug and tumbler. <p style="color:yellow" class="tet">Use a limpet to make your own bottle & cup!</p></p>
+            <p>생활용품</p>
           </div>
           <div class="lists">
             <div class="list4">
-              <div
-              style="background-image: url('../../static/img/sticker_modified.jpg')"
-              class="img">
+              <div class="img">
                 <a href="https://www.smilecat.com/" class="ac1">
                   <div
+                    style="
+                      background-image: url('../../static/img/sticker_modified.jpg');
+                    "
                     class="imc1"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/sticker_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/sticker_origin.jpg');
+                    "
                     class="dis1"
                   >
-                    Smilecat
+                    스마일캣
                   </div>
                 </a>
                 <a href="http://www.adsland.com/" class="ac2">
                   <div
+                    style="
+                      background-image: url('../../static/img/sticker_modified.jpg');
+                    "
                     class="imc2"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/sticker_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/sticker_origin.jpg');
+                    "
                     class="dis2"
                   >
-                    Adsland
+                    성원애드피아
                   </div>
                 </a>
                 <a href="http://www.t-free.co.kr/" class="ac3">
                   <div
+                    style="
+                      background-image: url('../../static/img/sticker_modified.jpg');
+                    "
                     class="imc3"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/sticker_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/sticker_origin.jpg');
+                    "
                     class="dis3"
                   >
-                    The Fancy & Stiker
+                    더팬스
                   </div>
                 </a>
                 <a href="http://www.huniprinting.com/" class="ac4">
                   <div
+                    style="
+                      background-image: url('../../static/img/sticker_modified.jpg');
+                    "
                     class="imc4"
                   ></div>
                   <div
-                    style="background-image: url('../../static/img/sticker_origin.jpg')"
+                    style="
+                      background-image: url('../../static/img/sticker_origin.jpg');
+                    "
                     class="dis4"
                   >
-                    huniprinting
+                    후니프린팅
                   </div>
                 </a>
               </div>
             </div>
-            <p class='tes'>Bookbinding</p>
-            <p class="tet">These links allow you to customize bookbiding such as calendar and postcard. <p style="color:yellow" class="tet">Use a limpet to make your own bookbinding!</p></p>
+            <p>그 외 기타</p>
           </div>
         </div>
       </div>
