--- a/templates/result.html
+++ b/templates/result.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>LimnPet 🐶</title>
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename = 'favicon.ico') }}"
+      type="image/x-icon"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -76,14 +86,21 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <select name="lng">
-                    <option type="text" , value="en">한국어</option>
-                    <option type="text" , value="en">English</option>
-                    <option type="text" , value="ja">日本語</option>
-                    <option type="text" , value="es">español</option>
-                    <option type="text" , value="fr">français</option>
-                    <option type="text" , value="id">bahasa Indonesia</option>
-                    <option type="text" , value="zh-CN">简体中文</option>
-                    <option type="text" , value="zh-TW">繁體中文</option>
+                    <option type="text" , value="ko">
+                      <a class="ko" href="/index_ko">한국어</a>
+                    </option>
+                    <option type="text" , value="en">
+                      <a class="en" href="/index">English</a>
+                    </option>
+                    <option type="text" , value="ja">
+                      <a class="ja" href="/index_ja">日本語</a>
+                    </option>
+                    <option type="text" , value="es">
+                      <a class="es" href="/index_es">español</a>
+                    </option>
+                    <option type="text" , value="zh-CN">
+                      <a class="zh-CN" href="/index_zh-CN">简体中文</a>
+                    </option>
                   </select>
                 </ul>
               </li>
@@ -114,7 +131,7 @@
           <div id="download_button">
             <a href="{{url_for('static', filename = img_file)}}" download>
               <button class="remove-image">
-                <span class="image-title">저장하기</span>
+                <span class="image-title">Save</span>
               </button>
             </a>
           </div>
@@ -125,7 +142,7 @@
               type="button"
               onClick="location.href='/service'"
             >
-              <span class="image-title">다시하기</span>
+              <span class="image-title">Try Again</span>
             </button>
           </div>
 
@@ -135,7 +152,7 @@
               type="button"
               onClick="location.href='/home'"
             >
-              <span class="image-title">홈으로돌아가기</span>
+              <span class="image-title">Back Home</span>
             </button>
           </div>
 
